--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,11 @@ set(SERIALLIBRARY_DIR "" CACHE PATH "Path to SerialLibrary root dir")
 find_library(SERIALLIBRARY_RELEASE NAMES SerialLibrary PATHS "${SERIALLIBRARY_DIR}/build/*" NO_DEFAULT_PATH)
 find_library(SERIALLIBRARY_DEBUG NAMES SerialLibrary-d PATHS "${SERIALLIBRARY_DIR}/build/*" NO_DEFAULT_PATH)
 set(SERIALLIBRARY_LIBRARIES_TMP debug ${SERIALLIBRARY_DEBUG} optimized ${SERIALLIBRARY_RELEASE})
-set(SERIALLIBRARY_LIBRARIES ${SERIALLIBRARY_LIBRARIES_TMP} setupapi) # setupapi is needed for list_ports
+if (WIN32)
+set(SERIALLIBRARY_LIBRARIES ${SERIALLIBRARY_LIBRARIES_TMP} setupapi) # setupapi is needed for list_ports on windows
+else ()
+set(SERIALLIBRARY_LIBRARIES ${SERIALLIBRARY_LIBRARIES_TMP})
+endif (WIN32)
 find_path(SERIALLIBRARY_INCLUDE_DIR NAME serial/serial.h PATHS "${SERIALLIBRARY_DIR}/*" NO_DEFAULT_PATH)
 	
 set(MYGUI_DIR "" CACHE PATH "Path to mygui root dir")
