Added new class Serializer and added it to Node and BaseDevice. Split devices into Physical and Virtual. Made some customizations to Communication class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ target_sources(${PROJECT_NAME} PRIVATE
 	
 target_sources(${PROJECT_NAME} PRIVATE 
 	include/lsignal.hpp
+	include/Serializer.hpp
 	include/Application.hpp
 	include/Communication.hpp
 	include/Helpers.hpp
